cluster-config/dev/find/ingest/prod/container/container.yaml
---
---
# Source: container/templates/container-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ingest
    app.kubernetes.io/instance: ingest-prod
  name: ingest-prod
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: ingest
    app.kubernetes.io/instance: ingest-prod
---

# Source: container/templates/container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-prod
  namespace: default
  labels:
    app.kubernetes.io/name: ingest
    app.kubernetes.io/instance: ingest-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingest
      app.kubernetes.io/instance: ingest-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingest
        app.kubernetes.io/instance: ingest-prod
    spec:
      containers:
      - name: ingest
        image: episerver.azurecr.io/episerver/find-functions-ingest:0.1-develop-47604
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "1.8Gi"
          requests:
            cpu: "300m"
            memory: "1.2Gi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
      restartPolicy: Always
      imagePullSecrets:
      - name: acr-auth
      volumes:
      - name: azure
        azureFile:
          secretName: fileshare-secrets
          shareName: optiq-logs-prod
          readOnly: false
status: {}
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-ingest-prod-health
  namespace: default
spec:
  entryPoints:
    - https
    - internal-http
  tls:
    store: 
      name: default
  routes:
  - match: 'PathPrefix(`/ingest-service/health`) && Headers(`Ring`, `prod`)'
    kind: Rule
    middlewares:
    - name: replace-ingest-prod-service-health-path
    services:
    - name: ingest-prod
      port: 80
      namespace: default
  - match: 'PathPrefix(`/ingest-service/health`)'
    kind: Rule
    middlewares:
    - name: replace-ingest-prod-service-health-path
    services:
    - name: ingest-prod
      port: 80
      namespace: default
---

# Source: container/templates/container-service-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-ingest-prod-service-health-path
  namespace: default
spec:
  replacePath:
    path: /api/health
